r2e-compile-tests/cases/decorators/fail/bean_intercept_missing_dep.stderr
error[E0277]: type `QuotaRegistry` was not provided to the AppBuilder
  --> cases/decorators/fail/bean_intercept_missing_dep.rs:51:56
   |
51 |         AppBuilder::new().register::<CleanupService>().build_state().await
   |                                                        ^^^^^^^^^^^ missing `.provide::<QuotaRegistry>()` or `.register::<QuotaRegistry>()`
   |
   = help: the trait `Contains<QuotaRegistry, _>` is not implemented for `TNil`
   = note: every dependency must be provided or registered as a bean before calling `build_state()`
help: the following other types implement trait `Contains<H, Idx>`
  --> $WORKSPACE/r2e-core/src/type_list.rs
   |
   | impl<H, T> Contains<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `Contains<H, Here>`
...
   | impl<H, X, T, I> Contains<H, There<I>> for TCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `Contains<H, There<I>>`
...
   | impl<H, T> Contains<H, Here> for HCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<H, T>` implements `Contains<H, Here>`
   | impl<H, X, T, I> Contains<H, There<I>> for HCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<X, T>` implements `Contains<H, There<I>>`
   = note: required for `TCons<CleanupService, TNil>` to implement `Contains<QuotaRegistry, There<_>>`
   = note: required for `TCons<QuotaRegistry, TNil>` to implement `AllSatisfied<TCons<CleanupService, TNil>, (There<_>, ())>`
note: required by a bound in `builder::nostate::<impl r2e::AppBuilder<NoState, P, R, Mods>>::build_state`
  --> $WORKSPACE/r2e-core/src/builder/nostate.rs
   |
   |     pub async fn build_state<W, MW>(self) -> AppBuilder<<P as BuildHList>::Output>
   |                  ----------- required by a bound in this associated function
...
   |         R: AllSatisfied<P, W>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `builder::nostate::<impl AppBuilder<NoState, P, R, Mods>>::build_state`

error[E0277]: type `QuotaRegistry` was not provided to the AppBuilder
  --> cases/decorators/fail/bean_intercept_missing_dep.rs:51:9
   |
51 |         AppBuilder::new().register::<CleanupService>().build_state().await
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `.provide::<QuotaRegistry>()` or `.register::<QuotaRegistry>()`
   |
   = help: the trait `Contains<QuotaRegistry, _>` is not implemented for `TNil`
   = note: every dependency must be provided or registered as a bean before calling `build_state()`
help: the following other types implement trait `Contains<H, Idx>`
  --> $WORKSPACE/r2e-core/src/type_list.rs
   |
   | impl<H, T> Contains<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `Contains<H, Here>`
...
   | impl<H, X, T, I> Contains<H, There<I>> for TCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `Contains<H, There<I>>`
...
   | impl<H, T> Contains<H, Here> for HCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<H, T>` implements `Contains<H, Here>`
   | impl<H, X, T, I> Contains<H, There<I>> for HCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<X, T>` implements `Contains<H, There<I>>`
   = note: required for `TCons<CleanupService, TNil>` to implement `Contains<QuotaRegistry, There<_>>`
   = note: required for `TCons<QuotaRegistry, TNil>` to implement `AllSatisfied<TCons<CleanupService, TNil>, (There<_>, ())>`
note: required by a bound in `builder::nostate::<impl r2e::AppBuilder<NoState, P, R, Mods>>::build_state`
  --> $WORKSPACE/r2e-core/src/builder/nostate.rs
   |
   |     pub async fn build_state<W, MW>(self) -> AppBuilder<<P as BuildHList>::Output>
   |                  ----------- required by a bound in this associated function
...
   |         R: AllSatisfied<P, W>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `builder::nostate::<impl AppBuilder<NoState, P, R, Mods>>::build_state`

error[E0277]: type `QuotaRegistry` was not provided to the AppBuilder
  --> cases/decorators/fail/bean_intercept_missing_dep.rs:51:70
   |
51 |         AppBuilder::new().register::<CleanupService>().build_state().await
   |                                                                      ^^^^^ missing `.provide::<QuotaRegistry>()` or `.register::<QuotaRegistry>()`
   |
   = help: the trait `Contains<QuotaRegistry, _>` is not implemented for `TNil`
   = note: every dependency must be provided or registered as a bean before calling `build_state()`
help: the following other types implement trait `Contains<H, Idx>`
  --> $WORKSPACE/r2e-core/src/type_list.rs
   |
   | impl<H, T> Contains<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `Contains<H, Here>`
...
   | impl<H, X, T, I> Contains<H, There<I>> for TCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `Contains<H, There<I>>`
...
   | impl<H, T> Contains<H, Here> for HCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<H, T>` implements `Contains<H, Here>`
   | impl<H, X, T, I> Contains<H, There<I>> for HCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<X, T>` implements `Contains<H, There<I>>`
   = note: required for `TCons<CleanupService, TNil>` to implement `Contains<QuotaRegistry, There<_>>`
   = note: required for `TCons<QuotaRegistry, TNil>` to implement `AllSatisfied<TCons<CleanupService, TNil>, (There<_>, ())>`
note: required by a bound in `builder::nostate::<impl r2e::AppBuilder<NoState, P, R, Mods>>::build_state`
  --> $WORKSPACE/r2e-core/src/builder/nostate.rs
   |
   |     pub async fn build_state<W, MW>(self) -> AppBuilder<<P as BuildHList>::Output>
   |                  ----------- required by a bound in this associated function
...
   |         R: AllSatisfied<P, W>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `builder::nostate::<impl AppBuilder<NoState, P, R, Mods>>::build_state`
